@startuml 01-security-passwordHasher-and-tokenManagement

left to right direction

title 01 Security - Password and Token Management System

package "Interfaces" {
  package "Base" {
    interface IAdditionalInfo {
      +readonly [key: string]: unknown
    }
  }

  package "Security" {
    interface IPasswordHasher {
      +hash(password: string): Promise<string>
      +verify(hashedPassword: string, password: string): Promise<boolean>
    }

    interface ITokenManager {
      +generateAccessToken(payload: ITokenPayload): string
      +generateRefreshToken(payload: ITokenPayload): string
      +verifyToken(token: string): ITokenPayload
      +extractPayload(token: string): ITokenPayload
    }

    interface ITokenPayload {
      +userId: string
      +username: string
      +role: string
    }
  }
}

package "Exceptions" {
  package "Base" {
    class ApiError {
      +message: string
      +statusCode: number
      +additionalInfo: IAdditionalInfo
      +timestamp: Date

      +constructor(message: string, statusCode: number, additionalInfo: IAdditionalInfo)
      +log(): this
    }
  }

  package "Security" {
    class PasswordError {
      +constructor(message: string, statusCode: number, additionalInfo: IAdditionalInfo)
      +{static} validation(fieldName: string, details?: string): PasswordError
      +{static} hashing(originalError?: string): PasswordError
      +{static} verification(originalError?: string): PasswordError
    }

    class TokenError {
      +constructor(message: string, statusCode: number, additionalInfo: IAdditionalInfo)
      +{static} invalidFormat(): TokenError
      +{static} invalidPayload(): TokenError
      +{static} generation(originalError?: string): TokenError
      +{static} verification(originalError?: string): TokenError
      +{static} expired(): TokenError
      +{static} invalid(): TokenError
      +{static} notActive(): TokenError
      +{static} invalidSecret(): TokenError
    }
  }
}

package "Security Implementations" {
  class PasswordHasher {
    -readonly argonConfig: Options

    +constructor()
    +hash(password: string): Promise<string>
    +verify(password: string, hashedPassword: string): Promise<boolean>
  }

  class TokenManager {
    -readonly secret: string
    -readonly accessTokenExpiresIn: string
    -readonly refreshTokenExpiresIn: string

    +constructor(secret?: string)
    +generateAccessToken(payload: ITokenPayload): string
    +generateRefreshToken(payload: ITokenPayload): string
    +verifyToken(token: string): ITokenPayload
    +extractPayload(token: string): ITokenPayload
  }
}

' HÉRITAGE (Rouge - épais)
ApiError <|-- PasswordError #line:red;line.bold;text:red : extends
ApiError <|-- TokenError #line:red;line.bold;text:red : extends

' IMPLÉMENTATION (Teal - pointillé)
IPasswordHasher <|.. PasswordHasher #line:teal;line.dashed;text:teal : implements
ITokenManager <|.. TokenManager #line:teal;line.dashed;text:teal : implements

' USAGE/DÉPENDANCE (Orange - pointillé)
ApiError ..> IAdditionalInfo #line:orange;line.dotted;text:orange : uses
PasswordError ..> IAdditionalInfo #line:orange;line.dotted;text:orange : uses
TokenError ..> IAdditionalInfo #line:orange;line.dotted;text:orange : uses

' RELATIONS MANQUANTES AJOUTÉES
ITokenManager ..> ITokenPayload #line:orange;line.dotted;text:orange : uses
TokenManager ..> ITokenPayload #line:orange;line.dotted;text:orange : uses

' THROW/EXCEPTIONS (Purple - pointillé)
PasswordHasher ..> PasswordError #line:magenta;line.dotted;text:magenta : throws
TokenManager ..> TokenError #line:magenta;line.dotted;text:magenta : throws

note as couleurs
  **LÉGENDE DES COULEURS**
  Rouge (épais) : Héritage (extends)
  Teal (pointillé) : Implémentation (implements)
  Orange (pointillé) : Usage/Dépendance
  Magenta (pointillé) : Exceptions thrown
end note

note right of PasswordHasher
  **HASHAGE PASSWORDS**
  - Utilise Argon2id plus sécurisé que Bcrypt
  - Argon2 recommandé par l'OWASP
  - Argon2 configurable pour de meilleures performances
  - Méthodes async pour performance
  - Validation défensive des paramètres
  - Gestion d'erreurs typées
  - Résistant aux attaques timing
end note

note right of TokenManager
  **GESTION JWT TOKENS**
  - Secret configurable (env vs constructor)
  - Access & Refresh tokens séparés
  - Validation payload défensive
  - Extraction sécurisée des claims
  - Durées configurables via env
  - Rotation automatique des secrets
  - Vérification de l'intégrité
end note

note right of ApiError
  **CLASSE ERREUR BASE**
  - Structure standardisée
  - Informations additionnelles typées
  - Timestamp automatique
  - Method chaining avec log()
  - Extensible pour tous types d'erreurs
  - Conformité RGPD pour logging
end note

note left of PasswordError
  **ERREURS PASSWORDS**
  - Factory methods statiques
  - Validation, hashing, verification
  - Informations contextuelles
  - Original error préservée
  - Codes d'erreur standardisés
  - Pas de leak d'informations sensibles
end note

note left of TokenError
  **ERREURS TOKENS**
  - Gestion complète du cycle JWT
  - Format, payload, expiration
  - Génération et vérification
  - Secret invalide détecté
  - Tokens révoqués gérés
  - Audit trail intégré
end note

note bottom of ITokenPayload
  **PAYLOAD JWT STRUCTURE**
  - userId : identifiant unique utilisateur
  - username : nom d'utilisateur (optionnel)
  - role : rôle utilisateur (RBAC)
  - Extensible selon besoins métier
  - Pas de données sensibles
  - Conformité RGPD
end note

note top of IAdditionalInfo
  **DONNÉES CONTEXTUELLES**
  - Index signature flexible
  - Immutable après création
  - Adapté aux besoins métier
  - Pas de sur-engineering
  - Type-safe avec unknown
end note

@enduml
